# cbers4asat

./: .flake8  .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  en-US_README.md  mkdocs.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: build-cbers4asat-cli.yml  build-cbers4asat.yml  check-inpe-stac-api-compatibility.yml  test-cbers4asat.yml
cbers4asat/: __init__.py  cbers4asat.py
cbers4asat/cbers4a/: __init__.py  collection.py  item.py  itemCollection.py  search.py
cli/: .gitignore  Cargo.toml
cli/package/deb/DEBIAN/: control
cli/src/: main.rs
cli/src/cbers4asat/: mod.rs  print.rs  stac_query.rs  stac_query_builder.rs
cli/src/cbers4asat/stac/: metadata.rs  mod.rs  query.rs  utils.rs
docs/: api_reference.md  cli.md  examples.md  index.md  installation.md  quickstart.md  requirements.txt
src/cbers4asat/: __init__.py  cbers4asat.py
src/cbers4asat/cbers4a/: __init__.py  collection.py  collections.py  download.py  item.py  itemCollection.py  request.py  search.py
src/cbers4asat/cbers4a/utils/: dataclass.py
src/cbers4asat/tools/: __init__.py  geometry.py  grid.py  image.py
tests/: fixtures.py  test_Cbers4aAPI.py  test_Tools.py  test_tools_image.py
tests/data/: BAND0.tif  BAND1.tif  BAND2.tif  BAND3.tif  CLIP.tif  MASK.geojson  MULTISPECTRAL.tif  PANSHARP.tif  test.geojson
tests/mocks/: __init__.py  feature_model.py  stac_feature_collection_empty_response.py  stac_feature_collection_response.py  stac_feature_response.py
