[project]
name = "cbers4asat"
version = "0.6.7"
description = "Biblioteca Python para consultar o catálogo e realizar operações com dados do CBERS4A"
authors = [
    { name = "Gabriel Russo", email = "gabrielrusso@protonmail.com" }]
license = { file = "LICENSE" }
keywords = ["cbers", "cbers4a", "remote sensing", "geoprocessing"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS"
]
dependencies = [
    "geopandas>=0.9",
    "requests>=2.25.1",
    "pandas>=1.3.5"
]

[project.optional-dependencies]
dev = [
    "hatch>=1.6.3"
]
tools = [
    "rasterio>=1.3.6",
    "numpy>=1.24.2",
    "scikit-image>=0.20.0"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.11.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/cbers4asat"]

[tool.hatch.build]
exclude = [
    "tests/",
    ".github/",
    ".flake8",
    "tox.ini"
]

[tool.hatch.envs.default]
dependencies = [
    "tox>=4.4.4",
    "black>=23.1"
]

[tool.hatch.envs.default.scripts]
format = "black src/cbers4asat"
test = "tox"

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.4.2",
    "mkdocstrings>=0.20.0",
    "mkdocstrings-python>=0.8.3"
]

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve"
build = "mkdocs build --clean --strict"

[project.urls]
"Homepage" = "https://github.com/gabriel-russo/cbers4asat"
"Bug Tracker" = "https://github.com/gabriel-russo/cbers4asat/issues"
"Repository" = "https://github.com/gabriel-russo/cbers4asat.git"
