[project]
name = "cbers4asat"
version = "0.10.0"
description = "Biblioteca Python para realizar a busca e processamento de imagens dos satélites CBERS-04A e AMAZONIA-1"
authors = [
    { name = "Gabriel Russo", email = "gabrielrusso@protonmail.com" }]
license = { file = "LICENSE" }
keywords = ["cbers", "cbers4a", "cbers-04a", "cbers-4a", "amazonia-1", "remote sensing", "geoprocessing"]
readme = "README.md"
requires-python = ">=3.11,<4"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS"
]
dependencies = [
    "geopandas>=1.1.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "hatch>=1.14.2"
]
tools = [
    "rasterio>=1.4.3",
    "numpy>=2.3.3",
    "scikit-image>=0.25.2",
    "geojson>=3.2.0",
    "geomet>=1.1.0"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/cbers4asat"]

[tool.hatch.build]
exclude = [
    "tests/",
    ".github/",
    "cli/",
    ".flake8",
    "tox.ini",
    "site"
]

[tool.hatch.envs.default]
dependencies = [
    "tox>=4.30.2",
    "black>=25.9.0"
]

[tool.hatch.envs.default.scripts]
format = "black src/cbers4asat"
test = "tox"

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2"
]

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve"
build = "mkdocs build --clean --strict"

[project.urls]
"Homepage" = "https://cbers4asat.readthedocs.io/pt_BR/latest"
"Bug Tracker" = "https://github.com/gabriel-russo/cbers4asat/issues"
"Repository" = "https://github.com/gabriel-russo/cbers4asat.git"
