[package]
name = "cbers4asat"
description = "Command Line interface for searching and downloading satellite imagery from CBERS-04A and AMAZONIA-1 Catalog"
version = "0.2.0"
edition = "2021"
authors = ["Gabriel Russo <gabrielrusso@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive"] }
geo = "0.26.0"
geojson = "0.24.1"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = [] }
